sudah bisa bekerja, kekurangan ada pada bug
